--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@
   pointer-events: none;
 }
 
+.login {
+  width: 300px; 
+  align-items: center;
+  height: 100vh;
+  width:60vh;
+  display: flex;
+  justify-content: center;
+  
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
