--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,14 @@
 .custom-search-input {
   height: 50px; /* Adjust the width as needed */
 }
-.bg-event-image {
-  background-image: url('https://i.pinimg.com/564x/6f/4c/5c/6f4c5c27ba30aaad59f2fb4d99928ab7.jpg'); /* Replace 'path/to/your/image.jpg' with the actual path to your image */
-  background-size: cover; /* Cover the entire element with the background image */
-  background-position: center; /* Center the background image */
+body {
+  background-image: url('https://i.pinimg.com/564x/6f/4c/5c/6f4c5c27ba30aaad59f2fb4d99928ab7.jpg');
+  background-size: cover;
+  background-position: center;
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
   height: 100vh;
 }
+
 
 
