--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,12 @@ body {
   gap: 130px; /* Adjust the value as needed */
 }
 
+.text-center {
+  text-align: center;
+  vertical-align: middle;
+}
+
+
 
 
 
