--- a/src/App.css
+++ b/src/App.css
@@ -99,4 +99,113 @@ body {
 
 
 
+/*Certificate*/
+.certificate-wrapper {
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
 
+.certificate-container {
+  width: 800px;
+  height: 600px;
+  border: 10px solid #e3e3e3;
+  padding: 30px;
+  background-color: white;
+  position: relative;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);background-image: url('https://t3.ftcdn.net/jpg/05/53/50/90/360_F_553509039_1VmGaPFjrhzzwgCbwNvZ1ZNOhYsEmUxP.jpg'); /* Update the path accordingly */
+  background-size: cover;
+}
+
+.certificate-header {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.certificate-header h1 {
+  font-size: 24px;
+  margin: 0;
+}
+
+.certificate-header p {
+  font-size: 18px;
+  margin: 0;
+}
+
+.certificate-body {
+  text-align: center;
+}
+
+.certificate-body h2 {
+  font-size: 48px;
+  color: #d9534f;
+  margin: 10px 0;
+}
+
+.certificate-body p {
+  font-size: 16px;
+  margin: 10px 0;
+}
+
+.certificate-footer {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  bottom: 30px;
+  width: calc(100% - 60px);
+}
+
+.certificate-footer .signature {
+  text-align: right;
+}
+
+.certificate-footer .signature p {
+  margin: 5px 0;
+}
+
+.background-design {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover;
+  opacity: 0.2;
+}
+
+.award-text {
+  font-size: 32px;
+  font-weight: bold;
+  color: #d9534f;
+}
+
+.organization-logo {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
+.organization-logo img {
+  width: 100px;
+}
+
+.seal {
+  display: inline-block;
+  margin: 20px 0;
+  text-align: center;
+}
+
+.seal img {
+  width: 50px;
+}
+
+.participant-name {
+  font-family: 'Brush Script MT', cursive;
+  font-size: 36px;
+  font-weight: bold;
+}
